flights app uskladjena sa mongodb-om